chore: fix tsconfig complaining about moduleResolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "typeRoots": [
       "./node_modules/@types",
       "./lib/types"
-    ]
+    ],
+    "moduleResolution": "node16"
   },
   "//": "This file is partially managed by code-skeleton. Changes may be overwritten."
 }
