--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint": "^8.0.0",
     "tap": "^16.0.0",
     "ts-node": "^10.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "5.2.2"
   },
   "peerDependencies": {
     "code-skeleton": "^2.0.0"
