--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "bin/**/*.js",
     "lib/**/*.js",
     "lib/**/*.d.ts",
-    "!lib/types/**"
+    "!lib/types/**",
+    "lib/content/**"
   ],
   "tap": {
     "coverage": true,
