--- a/lib/content/ci.yml
+++ b/lib/content/ci.yml
@@ -75,7 +75,14 @@ jobs:
           DOTENV_KEY: ${{ secrets.DOTENV_KEY }}
         <%/env_vault%>
         run: npm test --ignore-scripts
-
+     - name: Weekly Integration Tests
+        if: github.event_name == 'schedule'
+        run: |
+          if npm run --silent | grep -q "test:integration"; then
+            npm run test:integration --ignore-scripts
+          else
+            echo "No integration tests to run, skipping..."
+          fi
   weekly_test:
     name: Weekly Full Test
     runs-on: ubuntu-latest
