--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,11 @@ jobs:
         run: echo "::add-matcher::.github/matchers/tap.json"
       - name: Test
         run: npm test --ignore-scripts
+      - name: Weekly Integration Tests
+        if: github.event_name == 'schedule'
+        run: |
+          if npm run --silent | grep -q "test:integration"; then
+            npm run test:integration --ignore-scripts
+          else
+            echo "No integration tests to run, skipping..."
+          fi
