feat: update tap to 18
BREAKING CHANGE: This update is not backwards compatible with previous versions of testing.

This also adds some tests to the skeleton itself showcases how to use mocking with built in plugins, and spies via the added sinon plugin. A .taprc file has also been added as an example of adding some tap configuration.

--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "mustache": "^4.2.0"
   },
   "devDependencies": {
+    "@tapjs/sinon": "^1.1.18",
     "@tsconfig/node18": "^18.0.0",
     "@types/mustache": "^4.0.0",
     "@types/node": "^18.0.0",
-    "@types/tap": "^15.0.0",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "tap": "^16.0.0",
+    "tap": "^18.7.0",
     "ts-node": "^10.0.0",
     "typescript": "5.2.2"
   },
@@ -54,9 +55,5 @@
     "lib/**/*.d.ts",
     "!lib/types/**",
     "lib/content/**"
-  ],
-  "tap": {
-    "coverage": true,
-    "ts": true
-  }
+  ]
 }
