--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     ".eslintrc.js"
   ],
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "typeRoots": [
       "./node_modules/@types",
       "./lib/types"
