--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "^8.0.0",
     "tap": "^18.7.0",
     "ts-node": "^10.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.2.2"
   },
   "peerDependencies": {
     "code-skeleton": "^2.0.0"
