--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mustache": "^4.2.0"
   },
   "devDependencies": {
+    "@istanbuljs/esm-loader-hook": "^0.2.0",
+    "@tapjs/esbuild-kit": "^1.1.19",
     "@tapjs/sinon": "^1.1.18",
     "@tapjs/tsx": "^1.1.19",
     "@tsconfig/node20": "^20.0.0",
